--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,7 @@
 .NavbarItems{
-    background-color: black;
-    height: 80px;
+    padding-top: 20px;
+    background-color: #041C32;
+    height: 110px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -38,7 +39,7 @@
 }
 
 .nav-links:hover{
-    background-color: gray;
+    background-color: black;
     color: white;
     border-radius: 4px;
     transition: all 0.2s ease-out;
@@ -74,17 +75,17 @@
         width: 100%;
         height: 400px;
         position: absolute;
-        top: 80px;
+        top: 110px;
         left: 200%;
         opacity: 1;
         transition: all 0.5s ease;
     }
     .nav-menu.active{
-        background-color: rgb(26, 25, 23);
+        background-color: #112031;
         left: 0;
         opacity: 1;
         transition: all 0.5 ease;
-        z-index: 2;
+        z-index: 1;
     }
 
     .nav-links{
@@ -95,7 +96,7 @@
     }
 
     .nav-links:hover{
-        background-color: rgb(205, 151, 44);
+        background-color: gray;
         border-radius: 0px;
     }
 
