Added projects component with mock cards

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -11,6 +11,7 @@
 .navbar-logo{
     color: white;
     justify-self: start;
+    font-family: 'Gentium Book Plus', 'serif';
     margin-left: 20px;
     cursor: pointer;
 }
@@ -39,8 +40,8 @@
 }
 
 .nav-links:hover{
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
     border-radius: 4px;
     transition: all 0.2s ease-out;
 }
