--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,6 +1,7 @@
 .title{
-    background-color: wheat;
-    color: #345B63;
+    background-color: white;
+    color: #041C32;
     text-align: center;
     padding: 100px;
+    font-size: 6rem;
 }
