--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -1,7 +1,7 @@
 .skills{
     background-color: #041C32;
     color: white;
-    text-align: center;
+    /* text-align: center; */
     padding: 100px;
 }
 
