Changing the About section

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,8 +1,8 @@
 .about{
-    background-color: wheat;
-    color: black;
+    background-color: #041C32;
+    color: white;
     text-align: center;
-    padding: 50px;
+    padding: 100px;
 }
 
 .h1{
