--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,3 +4,18 @@
     border: 0;
     font-family: 'Monserrat', 'sans-serif';
 }
+
+.z{
+    z-index: -1;
+}
+
+.animation_background {
+    background-color: #08090d;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 100;
+    left: 0;
+    z-index: -1; 
+  }
