Added mock page

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,6 +3,7 @@
     color: white;
     text-align: center;
     padding: 100px;
+    padding-bottom: 1200px;
     z-index: -1;
     font-size: 6rem;
 }
