--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,9 +2,46 @@
     background-color: #041C32;
     color: white;
     text-align: center;
-    padding: 100px;
+    padding: 0px 100px 50px;
 }
 
-.h1{
-    font-size: 2rem;
+
+
+.page{
+    background-color: white;
+    color: #041C32;
+    position: absolute;
+    top: 500px;
+    z-index: 1;
+    width: 1200px;
+    height: 1000px;
+    border-radius: 15px;
+    margin: 40px 20px 40px;
+}
+
+.about-title{
+    padding: 50px 50px 20px;
+    font-size: 4rem;
+    text-align: left;
+    margin: 40px;
+}
+
+hr {
+    margin: 0px 50px 0px;
+    color: black;
+    height: 3px;
+    opacity: 0.9;
+}
+
+.info-title{
+    padding-top: 30px;
+    font-size: 2.5rem;
+    text-align: left;
+    margin: 40px;
+}
+
+.info-data{
+    text-align: left;
+    margin: 40px;
+    font-size: 1.5rem;
 }
