--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -2,7 +2,7 @@
     background-color: #041C32;
     color: white;
     text-align: center;
-    padding: 0px 100px 50px;
+    padding-bottom: 100px;
 }
 
 
@@ -10,20 +10,17 @@
 .page{
     background-color: white;
     color: #041C32;
-    position: absolute;
-    top: 500px;
     z-index: 1;
-    width: 1200px;
-    height: 1000px;
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
     border-radius: 15px;
-    margin: 40px 20px 40px;
 }
 
 .about-title{
     padding: 50px 50px 20px;
     font-size: 4rem;
-    text-align: left;
-    margin: 40px;
+    margin-left: 40px;
 }
 
 hr {
