--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -2,8 +2,8 @@
     background-color: #041C32;
     color: white;
     text-align: center;
-    padding: 100px;
-    /* padding-bottom: 1200px; */
+    padding-top: 270px;
+    padding-bottom: 300px;
     z-index: -1;
     font-size: 6rem;
 }
