--- a/src/components/App.css
+++ b/src/components/App.css
@@ -12,8 +12,8 @@
 .animation_background {
     background-color: #08090d;
     width: 100%;
-    position: fixed;
-    top: 0;
+    position: relative;
+    top: 80px;
     right: 0;
     bottom: 100;
     left: 0;
