--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,6 +3,8 @@
     background-color: #041C32;
     height: 110px;
     display: flex;
+    position: relative;
+    z-index: 1;
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
