start working on skills

--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -2,10 +2,17 @@
     background-color: #041C32;
     color: white;
     /* text-align: center; */
-    padding: 100px;
+    padding: 50px;
     position: relative;
 }
 
 .list{
     font-size: 2rem;
+}
+
+.skill-title{
+    font-size: 4.5rem;
+    text-align: center;
+    padding-bottom: 60px;
+
 }
