--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -18,7 +18,7 @@
 
 .cards .card{
   text-align: center;
-  max-width: 20rem;
+  max-width: 23.5rem;
   margin-bottom: 3rem;
   padding: 2rem;
   border-color: #fff;
@@ -46,9 +46,10 @@
 
 .card-title{
     font-size: 2rem;
-    padding: 10px 0px 10px;
+    padding: 10px 0px 20px;
 }
 
 .card-description{
     font-size: 1.4rem;
+    padding-top: 20px;
 }
