--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -1,19 +1,24 @@
 .experience{
     background-color: white;
     padding: 70px;
+    position: relative;
+    z-index: 1;
     text-align: center;
 }
 
-.cards {
+.exps {
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     margin: 4rem auto;
     max-width: 90%;
   }
 
-.cards .card{
+.exps .exp{
   text-align: center;
-  max-width: 23.5rem;
+  max-width: 90%;
   margin-bottom: 3rem;
   padding: 2rem;
   border-color: #fff;
@@ -23,28 +28,28 @@
   transition: all 100ms ease-in-out;
 }
 
-.cards .card:hover {
+.exps .exp:hover {
     box-shadow: 0 0 35px -2px rgba(0,0,0,.2);
   }
 
-.cards .card:hover .card-logo{
+.exps .exp:hover .exp-logo{
     transform: scale(1.2);
 }
-.card-logo{
+.exp-logo{
     text-align: center;
     display: block;
     font-size: 4rem;
 }
-.card-logo:hover{
+.exp-logo:hover{
     transform: scale(1.2);
 }
 
-.card-title{
+.exp-title{
     font-size: 2rem;
     padding: 10px 0px 20px;
 }
 
-.card-description{
+.exp-description{
     font-size: 1.4rem;
     padding-top: 20px;
 }
