--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -16,6 +16,10 @@
     max-width: 90%;
   }
 
+.experience > h1{
+    font-size: 4.5rem;
+}
+
 .exps .exp{
   text-align: center;
   max-width: 90%;
@@ -29,7 +33,7 @@
 }
 
 .exps .exp:hover {
-    box-shadow: 0 0 35px -2px rgba(0,0,0,.2);
+    box-shadow: 0 0 55px -2px rgba(0,0,0,.2);
   }
 
 .exps .exp:hover .exp-logo{
