--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -26,19 +26,32 @@
 }
 
 .skill-cards .skill-card{
-    text-align: center;
     flex-basis: 100%;
+    background-color: #04293A;
+    background-color: transparent;
+    color: white;
     max-width: 23.5rem;
     margin-bottom: 3rem;
-    color: white;
     padding: 2rem;
     border-color: #fff;
     border-radius: 3px;
     box-shadow: 0 2px 0 rgba(0, 0, 0, 0.05), 0 5px 20px rgba(0, 0, 0, 0.1);
-    background-color: #04293A;
+    perspective: 1000px;
     transition: all 100ms ease-in-out;
 }
 
+.skill-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.2s;
+    transform-style: preserve-3d;
+  }
+
+.skill-card:hover .skill-card-inner {
+    transform: rotateY(180deg);
+}
 .skill-card  p {
     font-size: 3rem;
 }
