added ids to data files

--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -57,3 +57,10 @@
     font-size: 1.4rem;
     padding-top: 20px;
 }
+
+.img{
+    width: 300px;
+    display: block;
+    margin: auto;
+    padding-bottom: 40px;
+}
