--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,8 +3,8 @@
     background-color: #041C32;
     height: 110px;
     display: flex;
-    position: relative;
-    z-index: 1;
+    /* position: relative;
+    z-index: 1; */
     justify-content: center;
     align-items: center;
     font-size: 1.2rem;
@@ -39,6 +39,8 @@
     color: white;
     text-decoration: none;
     padding: 0.5rem 1rem;
+    position: relative;
+    z-index: 1;
 }
 
 .nav-links:hover{
