--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -36,7 +36,7 @@
     box-shadow: 0 0 55px -2px rgba(0,0,0,.2);
   }
 
-.exps .exp:hover .exp-logo{
+.exps .exp:hover .img{
     transform: scale(1.2);
 }
 .exp-logo{
@@ -49,7 +49,7 @@
 }
 
 .exp-title{
-    font-size: 2rem;
+    font-size: 2.5rem;
     padding: 10px 0px 20px;
 }
 
@@ -63,4 +63,5 @@
     display: block;
     margin: auto;
     padding-bottom: 40px;
+    padding-top: 30px;
 }
