--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -1,6 +1,7 @@
 .experience{
-    background-color: white;
+    background-color: #D4ECDD;
     padding: 70px;
+    padding-bottom: 5px;
     position: relative;
     z-index: 1;
     text-align: center;
@@ -18,6 +19,7 @@
 
 .experience > h1{
     font-size: 4.5rem;
+    color: #041C32;
 }
 
 .exps .exp{
@@ -51,6 +53,8 @@
 .exp-title{
     font-size: 2.5rem;
     padding: 10px 0px 20px;
+    color: #041C32;
+    font-family: 'Gulzar', serif;
 }
 
 .exp-description{
