--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -3,7 +3,7 @@
     color: white;
     /* text-align: center; */
     padding: 50px;
-    position: relative;
+    /* position: relative; */
 }
 
 .list{
@@ -31,8 +31,9 @@
     color: white;
     max-width: 23.5rem;
     text-align: center;
-    margin-bottom: 3rem;
-    padding: 2rem;
+    margin-bottom: 2rem;
+    /* padding: 2rem; */
+    padding-top: 1rem;
     border-color: #fff;
     border-radius: 3px;
     box-shadow: 0 2px 0 rgba(0, 0, 0, 0.05), 0 5px 20px rgba(0, 0, 0, 0.1);
@@ -41,6 +42,10 @@
 }
 
 .skill-card  p {
-    font-size: 3rem;
+    font-size: 1.7rem;
+}
+
+.skill-logo{
+    font-size: 2.5rem;
 }
 
