--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -16,6 +16,7 @@
     justify-self: start;
     margin-left: 20px;
     font-size: 2.5rem;
+    font-family: 'Pacifico', cursive;
     cursor: pointer;
 }
 
