--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -3,7 +3,7 @@
     color: white;
     /* text-align: center; */
     padding: 50px;
-    /* position: relative; */
+    position: relative;
 }
 
 .list{
@@ -27,7 +27,7 @@
 
 .skill-cards .skill-card{
     flex-basis: 100%;
-    background-color: #04293A;
+    background-color: #15314B;
     color: white;
     max-width: 23.5rem;
     text-align: center;
@@ -42,10 +42,16 @@
 }
 
 .skill-card  p {
-    font-size: 1.7rem;
+    font-size: 1.2rem;
+    font-family: Open Sans,Helvetica,Arial,sans-serif;
+}
+
+.skill-card:hover{
+    box-shadow: 0 0 10px #fff, 0 0 40px #fff, 0 0 80px #fff;
 }
 
 .skill-logo{
-    font-size: 2.5rem;
+    font-size: 3.5rem;
+    padding-bottom: 10px;
 }
 
