--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -39,6 +39,7 @@
     text-align: center;
     display: block;
     font-size: 4rem;
+    color: #041C32;
 }
 .card-logo:hover{
     transform: scale(1.2);
@@ -47,10 +48,14 @@
 .card-title{
     font-size: 2rem;
     padding: 10px 0px 20px;
+    text-decoration: none;
+    color: #041C32;
 }
 
 .card-description{
     font-size: 1.4rem;
     padding-top: 20px;
+    text-decoration: none;
+    color: #041C32;
 }
 
