Added tags for experience and data for projects

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -18,7 +18,7 @@
 
 .cards .card{
   text-align: left;
-  max-width: 23.5rem;
+  max-width: 24.5rem;
   margin-bottom: 3rem;
   padding: 2rem;
   border-color: #fff;
@@ -46,10 +46,11 @@
 }
 
 .card-title{
-    font-size: 2rem;
+    font-size: 1.7rem;
     padding: 10px 0px 20px;
     text-decoration: none;
     display: block;
+    font-family: 'Open Sans regular-400',Helvetica,Arial,sans-serif;
     margin: auto;
     text-align: center;
     color: #041C32;
@@ -69,12 +70,18 @@
     position: relative;
 }
 
+.skill-tags{
+    margin: auto;
+    text-align: center;
+}
+
 .skill-tag{
-    /* background-color: green; */
     display: inline-block;
     border-radius: 30px;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
     margin: 3px 5px;
-    /* padding: 5px 20px 5px 20px; */
     color: white;
     border-color: black;
 }
