--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -52,7 +52,7 @@
 
 .exp-title{
     font-size: 2.5rem;
-    padding: 10px 0px 20px;
+    padding: 10px 0px 0px;
     color: #033360;
     text-decoration: none;
     font-family: 'Gulzar', serif;
@@ -60,6 +60,7 @@
 
 .exp-description{
     font-size: 1.4rem;
+    font-family: Open Sans,Helvetica,Arial,sans-serif;
     padding-top: 20px;
     color: #033360;
 }
