Added the about info and reveal effects for all components

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -59,6 +59,7 @@
 .card-description{
     font-size: 1.4rem;
     padding-top: 20px;
+    font-family: Open Sans,Helvetica,Arial,sans-serif;
     text-decoration: none;
     color: #041C32;
 }
