--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,6 +1,7 @@
 .about{
     background-color: #041C32;
     color: white;
+    margin: auto;
     text-align: center;
     font-family: Open Sans,Helvetica,Arial,sans-serif;
     padding-bottom: 100px;
@@ -13,16 +14,15 @@
     color: #041C32;
     z-index: 1;
     box-shadow: 0 0 20px -2px rgb(255, 255, 255);
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
+    width: 90%;
+    margin-left: 5%;
     border-radius: 15px;
     transition: all 100ms ease-in-out;
 }
 
 
 .about-title{
-    padding: 50px 50px 20px;
+    padding: 30px;
     font-size: 4rem;
     margin-left: 40px;
 }
@@ -46,7 +46,45 @@ hr {
     text-align: left;
     font-family: Open Sans,Helvetica,Arial,sans-serif;
     margin: 40px;
+    margin-left: 70px;
     font-size: 1.5rem;
     text-decoration: none;
+}
 
+.me-img{
+    width: 60%;
+    height: 100%;
+    position: relative;
+    border-radius: 5%;
+    text-align: left;
+}
+
+.row{
+    padding-bottom: 50px;
+}
+
+.oldmain-img{
+    width: 95%;
+    height: 85%;
+    margin-left: 50px;
+    margin-top: 30px;
+    position: relative;
+    border-radius: 2%;
+    text-align: left;
+}
+
+.volunteer-title{
+    text-align: left;
+    margin: 30px;
+    display: inline-block;
+}
+
+.goal-data{
+    text-align: left;
+    font-family: Open Sans,Helvetica,Arial,sans-serif;
+    margin: 40px;
+    margin-left: 70px;
+    padding-bottom: 30px;
+    font-size: 1.5rem;
+    text-decoration: none;
 }
