--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -22,10 +22,12 @@
     color: hsl(209, 87%, 18%);
 }
 
-.exps .exp{
+.exp{
   text-align: center;
   max-width: 90%;
   margin-bottom: 3rem;
+  margin-left: auto;
+  margin-right: auto;
   padding: 2rem;
   border-color: #fff;
   border-radius: 3px;
