--- a/src/components/Skills/Skills.css
+++ b/src/components/Skills/Skills.css
@@ -32,7 +32,6 @@
     max-width: 23.5rem;
     text-align: center;
     margin-bottom: 2rem;
-    /* padding: 2rem; */
     padding-top: 1rem;
     border-color: #fff;
     border-radius: 3px;
@@ -47,7 +46,7 @@
 }
 
 .skill-card:hover{
-    box-shadow: 0 0 10px #fff, 0 0 40px #fff, 0 0 80px #fff;
+    box-shadow: 0 0 20px -2px rgb(5, 152, 237);
 }
 
 .skill-logo{
