--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -9,6 +9,7 @@
 
 
 
+
 .page{
     background-color: white;
     color: #041C32;
@@ -65,7 +66,6 @@ hr {
 
 .oldmain-img{
     width: 95%;
-    height: 85%;
     margin-left: 50px;
     margin-top: 30px;
     position: relative;
@@ -73,12 +73,11 @@ hr {
     text-align: left;
 }
 
-.volunteer-title{
-    text-align: left;
-    margin: 30px;
-    display: inline-block;
-}
+.goal-title{
+    font-family: Open Sans,Helvetica,Arial,sans-serif;
+    font-size: 3rem;
 
+}
 .goal-data{
     text-align: left;
     font-family: Open Sans,Helvetica,Arial,sans-serif;
@@ -87,4 +86,62 @@ hr {
     padding-bottom: 30px;
     font-size: 1.5rem;
     text-decoration: none;
+}
+
+
+@media screen and ( max-width:960px ){
+    .about-title {
+        font-size: 4.5rem;
+        margin: auto;
+    }
+    .info-data{
+        font-size: 1rem;
+        margin: 10px auto 40px;
+    }
+
+    .goal-title{
+        margin-top: 0px;
+        font-size: 1.5rem;
+
+    }
+    .oldmain-img{
+        width: 100%;
+        margin: 0px auto 20px;
+    }
+    .goal-data{
+        font-size: 1rem;
+        text-align: center;
+        margin: auto;
+        padding: 0px 20px 30px;
+    }
+
+    .container{
+        padding:10px;
+    }
+}
+
+@media screen and ( max-width:700px ){
+    .about-title {
+        font-size: 3rem;
+        padding-bottom: 30px;
+    }
+    .info-data{
+        font-size: 1rem;
+    }
+    .me-img{
+        width: 40%;
+    }
+}
+
+@media screen and ( max-width:400px ){
+    .about-title {
+        font-size: 3rem;
+        padding-bottom: 30px;
+    }
+    .info-data{
+        font-size: 0.8rem;
+    }
+    .me-img{
+        width: 50%;
+    }
 }
