--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     border: 0;
-    
+    overflow-x: hidden;
     font-family: 'Monserrat', 'sans-serif';
 }
 
@@ -20,3 +20,14 @@
     left: 0;
     z-index: -1; 
   }
+
+/* @media screen and ( max-width:960px ){
+    h1 {
+        font-size: 4.5rem;
+    }
+}
+@media screen and ( max-width:400px ){
+    h1{
+        font-size: 3rem;
+    }
+} */
