--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -66,7 +66,7 @@ hr {
 
 .oldmain-img{
     width: 95%;
-    margin-left: 50px;
+    margin-left: 30px;
     margin-top: 30px;
     position: relative;
     border-radius: 2%;
@@ -120,7 +120,7 @@ hr {
     }
 }
 
-@media screen and ( max-width:700px ){
+@media screen and ( max-width:900px ){
     .about-title {
         font-size: 3rem;
         padding-bottom: 30px;
@@ -140,8 +140,12 @@ hr {
     }
     .info-data{
         font-size: 0.8rem;
+        margin: 10px;
     }
     .me-img{
         width: 50%;
+    }
+    .goal-data{
+        font-size: 0.8rem;
     }
 }
