--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -41,3 +41,14 @@
     background-color: black;
     color:white;
 }
+
+@media screen and ( max-width:1024px ){
+    .contact-title{
+        font-size: 2rem;
+    }
+    .footer-link{
+        font-size: 0.8rem;
+        margin: 5px;
+    }
+
+}
