--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,7 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     border: 0;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     font-family: 'Monserrat', 'sans-serif';
 }
 
